added the login page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="profile-menu">
             <button>Profile Settings</button>
-            <button>Login</button>
+            <a href="login.html"><button>Login</button></a>
         </div>
     </header>
 
