--- a/index.html
+++ b/index.html
@@ -21,12 +21,22 @@
             background-color: #1e3a5f;
             color: white;
             padding: 10px 20px;
+
+            a:visited {
+                color: #0077b6;
+                /* Prevents color change after clicking */
+            }
+
+            a:active {
+                color: #0077b6;
+                /* Prevents color change while clicking */
+            }
         }
 
         .search-bar input {
             padding: 5px;
             border: none;
-            border-radius: 5px;
+            border-radius: 50px;
         }
 
         .profile-menu button,
@@ -36,7 +46,7 @@
             border: none;
             padding: 8px 12px;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 50px;
             transition: background 0.3s;
         }
 
@@ -56,7 +66,7 @@
             flex-direction: column;
             background: white;
             padding: 15px;
-            border-radius: 10px;
+            border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
 
@@ -72,9 +82,9 @@
 
 <body>
     <header>
-        <a href="#"><button>
-                <h1>MedBuddy_CareCircle</h1>
-            </button></a>
+        <a href="#" style="text-decoration: none;">
+            <h1>MedBuddy_CareCircle</h1>
+        </a>
         <div class="search-bar">
             <input type="text" placeholder="Search...">
             <button>🔍</button>
