--- a/signup.html
+++ b/signup.html
@@ -97,15 +97,9 @@
                 <label for="name">Full Name</label>
                 <input type="text" id="name" placeholder="Enter your full name" required>
             </div>
-
-            <div class="input-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" placeholder="Choose a username" required>
-            </div>
-
             <div class="input-group">
                 <label for="email">Gmail</label>
-                <input type="email" id="email" placeholder="Enter your Gmail" required>
+                <input type="email" id="email" placeholder="Enter your email" required>
             </div>
 
             <div class="input-group">
