Except backend done everything

--- a/public/Homepage.html
+++ b/public/Homepage.html
@@ -89,7 +89,7 @@
             <button>🔍</button>
         </div>
         <div class="profile-menu">
-            <button>Profile Settings</button>
+            <a href="profile.html"><button>Profile Settings</button></a>
             <a href="login.html"><button>Login</button></a>
         </div>
     </header>
