--- a/public/login.html
+++ b/public/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MedBuddy_CareCircle - Login</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -99,7 +100,7 @@
             Don't have an account? <a href="signup.html">Sign up</a>
         </div>
     </div>
-
+    <script src="main.js"></script>
 </body>
 
 </html>
