--- a/public/signup.html
+++ b/public/signup.html
@@ -111,7 +111,7 @@
         </form>
         <p class="login-link">Already have an account? <a href="login.html">Log in</a></p>
     </div>
-
+    <script src="main.js"></script>
 </body>
 
 </html>
